@@ -1,3 +1,8 @@
+2005-06-26  Bart Veer  <bartv@ecoscentric.com>
+
+	* include/var_intr.h (HAL_DELAY_US): new header to supply
+	processor-specific HAL_DELAY_US() macro
+
 2005-03-21  Bart Veer  <bartv@ecoscentric.com>
 
 	* cdl/hal_synth_i386.cdl, src/profile.c: add profiling support.
